--- a/ViewModel/ViewModelDemo2/app/src/main/res/values/strings.xml
+++ b/ViewModel/ViewModelDemo2/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ViewModelDemo2</string>
+    <string name="none">none</string>
+    <string name="add">Add</string>
 </resources>
