--- a/LiveData/LiveDataChallenge/app/src/main/res/values/strings.xml
+++ b/LiveData/LiveDataChallenge/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="LiveDataChallenge">ViewModelDemo1</string>
+    <string name="app_name">LiveDataChallenge</string>
 </resources>
