--- a/RoomDatabase/app/src/main/res/values/strings.xml
+++ b/RoomDatabase/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RoomDemo1</string>
+    <string name="subscriber_name_hint">Subscriber\'s name</string>
+    <string name="subscriber_email_hint">Subscriber\'s email</string>
 </resources>
