--- a/Notification/app/src/main/res/values/strings.xml
+++ b/Notification/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">NotiricationDemo</string>
+    <string name="app_name">NotificationDemo</string>
 </resources>
